# pcap-transfer

./: .gitignore  Cargo.toml  README.md  config.toml
doc/: 表格结构设计.md
docs/: 分包协议设计.md  表格结构设计.md
src/: cli.rs  config.rs  config_manager.rs  display.rs  error.rs  gui.rs  lib.rs  main.rs  network.rs  receiver.rs  sender.rs  stats.rs  timing.rs  utils.rs
src/app/: mod.rs
src/app/config/: manager.rs  message_types.rs  mod.rs  paths.rs  types.rs  validator.rs
src/app/error/: types.rs
src/app/logging/: mod.rs  setup.rs
src/core/: mod.rs
src/core/csv/: expr.rs  mod.rs  parser.rs  types.rs
src/core/field_types/: mod.rs  parser.rs  types.rs
src/core/field_types/expr/: mod.rs  types.rs  utils.rs
src/core/field_types/expr/evaluators/: literal_evaluator.rs  loop_evaluator.rs  mod.rs  random_evaluator.rs  switch_evaluator.rs
src/core/field_types/expr/parsers/: literal_parser.rs  loop_parser.rs  mod.rs  random_parser.rs  switch_parser.rs
src/core/network/: mod.rs  receiver.rs  sender.rs  types.rs
src/core/packet/: mod.rs  parser.rs
src/core/services/: mod.rs  transfer_service.rs
src/core/stats/: collector.rs  message_stats.rs  mod.rs
src/core/timing/: mod.rs
src/gui/: app.rs  config.rs  font.rs  icon.rs  mod.rs  renderer.rs
src/gui/components/: path_selector.rs  receiver_config.rs  sender_config.rs  stats.rs
src/gui/widgets/: mod.rs  status.rs  tabs.rs
src/ui/: app.rs  app_state.rs  config.rs  mod.rs
src/ui/components/: app_renderer.rs  message_config.rs  mod.rs  path_selector.rs  receiver_config.rs  sender_config.rs  stats.rs  stats_panel.rs
src/ui/fonts/: loader.rs  mod.rs
src/ui/icons/: loader.rs  mod.rs
src/ui/widgets/: mod.rs  status.rs
src/utils/: helpers.rs  mod.rs
tests/: config_manager_test.rs  csv_expr_integration.rs  field_types_test.rs
