[package]
name = "data-transfer"
version = "0.1.0"
edition = "2021"
authors = ["KimoTech"]
description = "高性能数据包传输测试工具"

[dependencies]
# 数据包读写
pcapfile-io = { version = "0.1.0" }

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 网络编程
tokio = { version = "1.0", features = ["full"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步运行时
futures = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 文件系统
path-absolutize = "3.1"

# 命令行美化
indicatif = "0.17"
owo-colors = "4.0"

# GUI 界面
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.14" # 文件对话框

[features]
default = []
