[package]
name = "pcap-transfer"
version = "0.1.2"
edition = "2021"
authors = ["KimoTech"]
description = "高性能数据包传输测试工具"

[dependencies]
# 数据包读写
pcapfile-io = { version = "0.1.2" }

# 网络编程
tokio = { version = "1.0", features = ["full"] }
socket2 = "0.5"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步运行时
futures = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 文件系统
path-absolutize = "3.1"
dirs = "5.0"

# GUI 界面
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
rfd = "0.14" # 文件对话框

[features]
default = []
